--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   By   having a glance at the points mentioned below, you will be able to   understand what kind of crypto exchange is it. These points would help   you understand whether you should use it to buy and sell   cryptocurrencies or not:<br>
   Lets you trade with cryptocurrency, fiat currency, precious metals, and other digital assets<br>
   When we look back at its history, we come to know that the platform has never been compromised<br>
-  Moreover, users from around 180+ countries of the world would be able to set up their <a href="https://uphldlog-ins/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a> account<br>
+  Moreover, users from around 180+ countries of the world would be able to set up their <a href="https://uphldlog-ins.github.io/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a> account<br>
   If you undergo any transaction between Uphold users, the transaction would not cost you any fee<br>
   The availability of a powerful API allows developers to build strong applications on them<br>
   While having a look at its drawbacks, the biggest drawback is that you might be charged a high trading fee<br>
@@ -38,7 +38,7 @@
   Pre-requisites to sign up on Uphold<br>
   Well,   there are a few details and documents you need to be ready with when   you go on to create your Uphold profile and the list is as follows:<br>
   Get ready with the details such as Email address, country of residence, your full name<br>
-  You need to set up a username and <a href="https://uphldlog-ins/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a> password as well<br>
+  You need to set up a username and <a href="https://uphldlog-ins.github.io/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a> password as well<br>
   Choose whether you are enrolling as a business or individual<br>
   Along with that, you have to provide details about your Date of birth and select your state or province<br>
   Some documents for completing the KYC<br>
@@ -56,7 +56,7 @@
   Click "Next" and complete the 2FA for accessing your Uphold account<br>
   If you do not remember your password or see a login error, click the "forgot password?" option<br>
   <strong>Conclusion:</strong><br>
-  While we have focused on discussing <a href="https://uphldlog-ins/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a>,   we have tried to make sure that you are getting your hands on the most   accurate and updated details about Uphold. By having a look at the   information provided herein, you will be able to come to a conclusion   about whether this exchange is made for you or not.<br>
+  While we have focused on discussing <a href="https://uphldlog-ins.github.io/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a>,   we have tried to make sure that you are getting your hands on the most   accurate and updated details about Uphold. By having a look at the   information provided herein, you will be able to come to a conclusion   about whether this exchange is made for you or not.<br>
 </p>
 </body>
 </html>
