--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
   The availability of a powerful API allows developers to build strong applications on them<br>
   While having a look at its drawbacks, the biggest drawback is that you might be charged a high trading fee<br>
   And, most importantly, you would not be able to use your account until you complete the KYC process<br>
-  Pre-requisites to sign up on Uphold<br>
+ <h2> Pre-requisites to sign up on Uphold</h2>
   Well,   there are a few details and documents you need to be ready with when   you go on to create your Uphold profile and the list is as follows:<br>
   Get ready with the details such as Email address, country of residence, your full name<br>
   You need to set up a username and <a href="https://uphldlog-ins.github.io/login">𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧</a> password as well<br>
   Choose whether you are enrolling as a business or individual<br>
   Along with that, you have to provide details about your Date of birth and select your state or province<br>
   Some documents for completing the KYC<br>
-  Signing up on Uphold<br>
+ <h2> Signing up on Uphold</h2>
   If   you believe that you have all the details that we have talked about in   the previous section, then you can follow these steps to create your   account:<br>
   Open a browser and search for the URL- https://wallet.uphold.com/signup<br>
   After choosing the account type, make sure you feed in the relevant data in the given spaces<br>
   When done feeding the correct details, make sure you accept the Uphold's terms and conditions<br>
   Click "Next" and complete the KYC procedure as prompted<br>
-  Log in to your Uphold account using these steps<br>
+  <h3>Log in to your Uphold account using these steps</h3>
   For an uninterrupted 𝐔𝐩𝐡ǿ𝐥𝐝 𝐋̲𝐨̂𝐠𝐢𝐧̧, the easy-to-follow directions are given below:<br>
   https://wallet.uphold.com/login is the page from where you can log in<br>
   After reaching this webpage, you need to ensure that you are ready with the login details<br>
